--- a/HTML/Link/pages/about.html
+++ b/HTML/Link/pages/about.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="services.html">Services</a> |
+        <a href="../index.html">Home</a> |
+        <a href="service.html">Services</a> |
         <a href="about.html">About</a> |
         <a href="contact.html">Contact</a> |
     </nav>
 
 <header>
 <h1>This is About Page</h1>
-<img src="depositphotos_59977559-stock-photo-hands-holding-word-about-us.jpg" alt="About Page" width="300" height="150">
+<img src="../images/depositphotos_59977559-stock-photo-hands-holding-word-about-us.jpg" alt="About Page" width="300" height="150">
 </header>
 <div>
     <p>
