--- a/HTML/Link/pages/contact.html
+++ b/HTML/Link/pages/contact.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="services.html">Services</a> |
+        <a href="../index.html">Home</a> |
+        <a href="service.html">Services</a> |
         <a href="about.html">About</a> |
         <a href="contact.html">Contact</a> |
     </nav>
 
 <header>
     <h1>This is Contact Page</h1>
-    <img src="istockphoto-1168945108-612x612.jpg" alt="Contact Page" width="300" height="150">
+    <img src="../images/istockphoto-1168945108-612x612.jpg" alt="Contact Page" width="300" height="150">
 </header>
 <div>
     <p>
