--- a/HTML/Link/pages/service.html
+++ b/HTML/Link/pages/service.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="services.html">Services</a> |
+        <a href="../index.html">Home</a> |
+        <a href="service.html">Services</a> |
         <a href="about.html">about</a> |
         <a href="contact.html">Contact</a>
     </nav>
 <header>   
 <h1>This is Services Page.</h1>
-<img src="../images/photodune-6221194-customer-service-team-s-e1468394369939-742x353.jpg" alt="Services Page" width="300" height="150" >
+<img src="../images/service image.jpg" alt="Services Page" width="300" height="150" >
 </header>
 <div>
     <p>...
